# arduinobot

./: .gitignore  README.md  arduinobot.urdf
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/arduinobot_controller/: AnglesConverterRequest.h  AnglesConverterResponse.h
devel/include/arduinobot_test/: AddTwoIntsRequest.h
devel/lib/arduinobot_controller/: angles_converter.py  angles_converter_cpp
devel/lib/arduinobot_test/: simple_cpp_publisher  simple_cpp_service  simple_cpp_service_client  simple_cpp_subscriber  simple_cpp_timer  simple_publisher.py  simple_service.py  simple_service_client.py  simple_timer.py
devel/lib/pkgconfig/: arduinobot_controller.pc  arduinobot_description.pc  arduinobot_test.pc
docs/: docs.txt
src/arduinobot_bringup/: package.xml
src/arduinobot_bringup/launch/: sim_complete.launch
src/arduinobot_controller/: CMakeLists.txt  package.xml
src/arduinobot_controller/config/: trajectory_controllers.yaml
src/arduinobot_controller/include/arduinobot_controller/: arduinobot_interface.h
src/arduinobot_controller/launch/: controller.launch
src/arduinobot_controller/scripts/: angles_converter.py
src/arduinobot_controller/src/: angles_converter.cpp  arduinobot_interface.cpp
src/arduinobot_controller/srv/: AnglesConverter.srv
src/arduinobot_description/launch/: display.launch  gazebo.launch
src/arduinobot_description/urdf/: arduinobot.urdf.xacro
src/arduinobot_moveit/: .setup_assistant  package.xml
src/arduinobot_moveit/config/: gazebo_arduinobot.urdf  kinematics.yaml  ompl_planning.yaml
src/arduinobot_moveit/launch/: move_group.launch
src/arduinobot_remote/: CMakeLists.txt  package.xml
src/arduinobot_remote/launch/: remote_interface.launch
src/arduinobot_remote/scripts/: alexa_interface.py  task_server.py
src/arduinobot_remote/src/: task_server.cpp
src/arduinobot_test/: CMakeLists.txt  package.xml
src/arduinobot_test/action/: Fibonacci.action
src/arduinobot_test/scripts/: simple_action_client.py  simple_action_server.py  simple_service.py  simple_service_client.py
src/arduinobot_test/src/: simple_action_client.cpp  simple_action_server.cpp  simple_publisher.cpp  simple_service.cpp  simple_service_client.cpp  simple_subscriber.cpp  simple_timer.cpp
src/rviz/: display.rviz
(+16 files in other folders)
