cmake_minimum_required(VERSION 3.0.2)
project(arduinobot_test)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  message_generation
)

add_service_files(
  FILES
  AddTwoInts.srv
)

generate_messages(
  DEPENDENCIES
  std_msgs
)

catkin_package()

include_directories(
  ${catkin_INCLUDE_DIRS}
)

add_executable(simple_cpp_publisher src/simple_publisher.cpp)
target_link_libraries(simple_cpp_publisher ${catkin_LIBRARIES})

add_executable(simple_cpp_subscriber src/simple_subscriber.cpp)
target_link_libraries(simple_cpp_subscriber ${catkin_LIBRARIES})

add_executable(simple_cpp_timer src/simple_timer.cpp)
target_link_libraries(simple_cpp_timer ${catkin_LIBRARIES})

catkin_install_python(
    PROGRAMS 
    scripts/simple_publisher.py 
    scripts/simple_subscriber.py
    scripts/simple_timer.py
    scripts/simple_service.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)